--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="keyword"
+    content="Financing, Listings, Real Estate, Landed Properties, Apartments, Condominiums, Detached Homes, Mortgage, Leases, Renting"
+    </meta> <meta name="description"
+    content="A leading real estate company with very excellent customer service and reach">
   <title>Prime Properties</title>
+  <style>
+    body {
+      background-color: khaki;
+    }
+
+    h1 {
+      color: mediumseagreen;
+    }
+  </style>
+  <link rel="icon" href="styles/favicon.ico">
+
 </head>
 
-<body>
-  <h1>Prime Properties</h1>
-  <a href="home.index">Home</a>
 
-  <a href="Listings.html">Listings</a>
-  <a href="Financing.html">Financing</a>
-  <a href="Contact.html">Contact</a>
+<body>
+  <h1>Prime Properties</h1> |
+  <a href="home.index">Home</a> |
+
+  <a href="Listings.html">Listings</a> |
+  <a href="Financing.html">Financing</a> |
+  <a href="Contact.html">Contact</a> |
   <p>Prime Properties is prepared to market and sell your property.</p>
   <p>The philosophy of Prime Properties is to promote our clients, not ourselves.</p>
   <p>We can also help you find the property that meets your needs:</p>
@@ -21,7 +37,10 @@
     <li>price</li>
     <li>features</li>
   </ul>
-  <h4>Prime Properties</h4> <h4>3055 Bode Road</h4> <h4>Schaumburg, IL 60194</h4> <h4>847-555-5555</h4>
+
+  <h4>3055 Bode Road <br>
+    Schaumburg, IL 60194 <br>
+    847-555-5555</h4>
 
 
 
